# 0x7

./: Cargo.toml  README.md
0x7-UI/: Cargo.toml  LICENSE  Makefile.toml  deny.toml
0x7-UI/resources/: index.html
0x7-UI/resources/fonts/: demo.html  stylesheet.css
0x7-UI/resources/styles/: helpers.css  main.css
0x7-UI/src/src/: global.rs  lib.rs
0x7-UI/src/src/pages/: root.rs
0x7-UI/src/src/ui_resources/: logo_slogan_white.rs  mod.rs
POCs/: README.md
POCs/shamir-program/: Cargo.toml
POCs/shamir-program/src/: main.rs
